--- a/JasperSiteCore/Areas/Admin/Content/Styles/simple-sidebar.css
+++ b/JasperSiteCore/Areas/Admin/Content/Styles/simple-sidebar.css
@@ -47,7 +47,8 @@
 #page-content-wrapper {
     width: 100%;
     position: absolute;
-    padding: 15px; 
+    margin:0px;
+    padding:0px;
 }
 
 #wrapper.toggled #page-content-wrapper {
